# DirectX12_HighPerformanceEample

./: CMakeLists.txt  GenerateProjectFiles.bat  README.md
Dx12HPerfApp/: CMakeLists.txt
Dx12HPerfApp/inc/: CommonInc.h  Dx12HPerfApp.h  Dx12Helper.h  RenderBase.h  Win64App.h
Dx12HPerfApp/inc/driver/: DX12Resources.h
Dx12HPerfApp/inc/utility/: timer.h
Dx12HPerfApp/shaders/: ComputeShader.hlsl  VertexShader.hlsl
Dx12HPerfApp/src/: Dx12HPerfApp.cpp  RenderBase.cpp  Win64App.cpp  main.cpp
Dx12HPerfApp/src/driver/: DX12Resources.cpp
Dx12HPerfApp/src/utility/: timer.cpp
